# uniprotpy

./: NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_core_entry.py  test_core_entry_client.py  test_core_entry_store.py  test_database.py  test_idmapping.py  test_parser.py  test_proteome.py  test_release_cache.py  test_shell.py  test_taxonomy.py  test_uniparc.py
tests/fixtures/: p04637-2.json  p04637.json  proteome-descendant.json  proteome-human-alternate.json  proteome-human-primary.json
uniprotpy/: __init__.py  cache.py  client.py  database.py  idmapping.py  models.py  parser.py  proteome_selector.py  proteomes.py  release.py  shell.py  taxonomy.py  uniparc.py
