[project]
name = "uniprotpy"
dynamic = ["version"]
description = "A Python client and release-aware local cache for UniProt data."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Daniel Marrama", email = "danielmarrama@gmail.com" },
  { name = "Austin Crinklaw", email = "austincrinklaw@gmail.com" },
]
dependencies = [
  "biopython>=1.80",
  "requests>=2.29.0",
  "sqlalchemy>=2.0.11",
]

[project.scripts]
uniprotpy = "uniprotpy.shell:run"

[project.urls]
Homepage = "https://github.com/dmx2/uniprotpy"
Repository = "https://github.com/dmx2/uniprotpy"
Issues = "https://github.com/dmx2/uniprotpy/issues"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.version]
path = "uniprotpy/version.py"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"
